--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 	"homepage": "https://github.com/tycrek/pagery#readme",
 	"devDependencies": {
 		"@tsconfig/node16": "^1.0.3",
-		"@types/fs-extra": "^9.0.13",
+		"@types/fs-extra": "^11.0.1",
 		"@types/node": "^18.11.18",
 		"@types/pug": "^2.0.6",
 		"typescript": "^4.9.4"
@@ -42,8 +42,8 @@
 		"autoprefixer": "^10.4.13",
 		"cssnano": "^5.1.14",
 		"fs-extra": "^11.1.0",
-		"postcss": "^8.4.20",
-		"postcss-font-magician": "^3.0.0",
+		"postcss": "^8.4.21",
+		"@tinycreek/postcss-font-magician": "^4.0.0",
 		"pug": "^3.0.2",
 		"tailwindcss": "^3.2.4"
 	}
